# lab7

./: CMakeLists.txt  main.cpp  new_rhombus.cpp  new_rhombus.h  rhombus.cpp  rhombus.h
